--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "lottie-react": "^2.4.0",
     "next": "latest",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.5",
